--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitTest</title>
-    <style>
-        *{text-align: center;}
-    </style>
-</head>
-<body>
-    <h1>Hello Git Samurai</h1>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/demoSamurai/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/demoSamurai/logo192.png"/><link rel="manifest" href="/demoSamurai/manifest.json"/><title>React App</title><script defer="defer" src="/demoSamurai/static/js/main.d288d070.js"></script><link href="/demoSamurai/static/css/main.18366ec5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
